--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<section>
-		<h1>Git, GitHub & the Command Line proba</h1>
-		<p>Gotta love becoming a collaborative coder NAJA </p>
+		<h1>Git, GitHub & the Command Line probaata </h1>
+		<p>Gotta love becoming a collaborative coder NAJA bazdavela </p>
 		<img src="img/happy-blue-robot.png">
 	</section>
 </body>
